Fix nits and remove the hacking of changing html editor element visibility by setting opacity and z-index

--- a/style/main.css
+++ b/style/main.css
@@ -326,13 +326,11 @@ form[role="dialog"][data-type="confirm"].lcdui-alert section {
   position: absolute;
   border: none;
   resize: none;
-  opacity: 0;
-  z-index: -999;
+  visibility: hidden;
 }
 
 .text-editor.show{
-  opacity: 1;
-  z-index: 10;
+  visibility: visible;
 }
 
 #textarea-editor {
